Prevent form collapsing on form refreshes (e.g. Admin > Custom Fields > Type Change

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1,5 +1,10 @@
 @import url(../../../stylesheets/application.css);
 
+form{
+	display: block;
+	overflow: auto;
+}
+
 #header {
 	height:auto;
     min-height:53px;
